--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.2",
     "gh-pages": "^6.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
@@ -40,5 +42,10 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://boy1434.github.io/React-app-practice"
+  "homepage": "https://boy1434.github.io/React-app-practice",
+  "devDependencies": {
+    "css-loader": "^6.9.0",
+    "mini-css-extract-plugin": "^2.7.6",
+    "style-loader": "^3.3.4"
+  }
 }
