배포 환경 설정

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://boy1434.github.io/React-app-practice",
+  "homepage": "https://boy1434.github.io/CoodingNunaStudy",
   "devDependencies": {
     "css-loader": "^6.9.0",
     "mini-css-extract-plugin": "^2.7.6",
